--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,178 @@
-<h2>Sign up</h2>
+<style>
+[data-kt-indicator=on]>.indicator-label-submit {
+	display: none;
+  background: transparent;
+}
+</style>
+<div class="wrapper" style="width:90%; margin-left:auto; margin-right:auto;">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+</div>
+
+	<body id="kt_body" class="bg-body">
+		<!--begin::Main-->
+		<div class="d-flex flex-column flex-root">
+			<!--begin::Authentication - Sign-up -->
+			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(assets/media/illustrations/dozzy-1/14.png">
+				<!--begin::Content-->
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
+					<!--begin::Logo-->
+          <%# 여기에 홈으로 가는 로고 하나 넣어줄 순 있죠 %>
+					<%# <a href="../../demo4/dist/index.html" class="mb-12">
+						<img alt="Logo" src="assets/media/logos/logo-1.svg" class="h-40px" />
+					</a> %>
+					<!--end::Logo-->
+					<!--begin::Wrapper-->
+					<div class="w-lg-600px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
+						<!--begin::Form-->
+						<form class="form w-100" novalidate="novalidate" id="kt_sign_up_form">
+							<!--begin::Heading-->
+							<div class="mb-10 text-center">
+								<!--begin::Title-->
+								<h1 class="text-dark mb-3">Create an Account</h1>
+								<!--end::Title-->
+								<!--begin::Link-->
+								<div class="text-gray-400 fw-bold fs-4">Already have an account?
+								<a href="../../demo4/dist/authentication/flows/basic/sign-in.html" class="link-primary fw-bolder">Sign in here</a></div>
+								<!--end::Link-->
+							</div>
+							<!--end::Heading-->
+							<!--begin::Action-->
+							<button type="button" class="btn btn-light-primary fw-bolder w-100 mb-10">
+							<img alt="Logo" src="/images/svg/brand-logos/google-icon.svg" class="h-20px me-3" />Sign in with Google</button>
+							<!--end::Action-->
+							<!--begin::Separator-->
+							<div class="d-flex align-items-center mb-10">
+								<div class="border-bottom border-gray-300 mw-50 w-100"></div>
+								<span class="fw-bold text-gray-400 fs-7 mx-2">OR</span>
+								<div class="border-bottom border-gray-300 mw-50 w-100"></div>
+							</div>
+							<!--end::Separator-->
+							<!--begin::Input group-->
+							<div class="row fv-row mb-7">
+								<div class="fv-row mb-7">
+									<label class="form-label fw-bolder text-dark fs-6">Full Name</label>
+									<%# <input class="form-control form-control-lg form-control-solid" type="text" placeholder="" name="full-name" autocomplete="off" /> %>
+                  <%= f.text_field :name, :label => 'First Name', required: true, autofocus: true , autocomplete: "name", :class => 'form-control form-control-lg form-control-solid' %>
+								</div>
+							</div>
+							<!--end::Input group-->
+							<!--begin::Input group-->
+							<div class="fv-row mb-7">
+								<label class="form-label fw-bolder text-dark fs-6">Email</label>
+								<%# <input class="form-control form-control-lg form-control-solid" type="email" placeholder="" name="email" autocomplete="off" /> %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control form-control-lg form-control-solid" %>
+							</div>
+							<!--end::Input group-->
+							<!--begin::Input group-->
+							<div class="mb-10 fv-row" data-kt-password-meter="true">
+								<!--begin::Wrapper-->
+								<div class="mb-1">
+									<!--begin::Label-->
+									<label class="form-label fw-bolder text-dark fs-6">Password</label>
+									<!--end::Label-->
+									<!--begin::Input wrapper-->
+									<div class="position-relative mb-3">
+										<%# <input class="form-control form-control-lg form-control-solid" type="password" placeholder="" name="password" autocomplete="off" /> %>
+                    <%= f.password_field :password, autocomplete: "off", :class=> "form-control form-control-lg form-control-solid" %>
+										<span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" data-kt-password-meter-control="visibility">
+											<i class="bi bi-eye-slash fs-2"></i>
+											<i class="bi bi-eye fs-2 d-none"></i>
+										</span>
+									</div>
+									<!--end::Input wrapper-->
+									<!--begin::Meter-->
+									<div class="d-flex align-items-center mb-3" data-kt-password-meter-control="highlight">
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+										<div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px"></div>
+									</div>
+									<!--end::Meter-->
+								</div>
+								<!--end::Wrapper-->
+								<!--begin::Hint-->
+								<div class="text-muted">Use 8 or more characters with a mix of letters, numbers &amp; symbols.</div>
+								<!--end::Hint-->
+							</div>
+							<!--end::Input group=-->
+							<!--begin::Input group-->
+							<div class="fv-row mb-5">
+								<label class="form-label fw-bolder text-dark fs-6">Confirm Password</label>
+								<%# <input class="form-control form-control-lg form-control-solid" type="password" placeholder="" name="confirm-password" autocomplete="off" /> %>
+                <%= f.password_field :password_confirmation, autocomplete: "off", :class=> "form-control form-control-lg form-control-solid" %>
+							</div>
+							<!--end::Input group-->
+							<!--begin::Input group-->
+							<div class="fv-row mb-10">
+								<label class="form-check form-check-custom form-check-solid form-check-inline">
+									<input class="form-check-input" type="checkbox" name="toc" value="1" />
+									<span class="form-check-label fw-bold text-gray-700 fs-6">I Agree
+									<a href="#" class="ms-1 link-primary">Terms and conditions</a>.</span>
+								</label>
+							</div>
+							<!--end::Input group-->
+							<!--begin::Actions-->
+							<div class="text-center">
+                <%= f.submit "Sign up", :class =>  "btn btn-primary"%>
+								<%# <button type="button" id="kt_sign_up_submit" class="btn btn-lg btn-primary">
+									<span class="indicator-label">
+
+                  </span>
+									<span class="indicator-progress">Please wait...
+									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+								</button> %>
+							</div>
+							<!--end::Actions-->
+						</form>
+						<!--end::Form-->
+					</div>
+					<!--end::Wrapper-->
+				</div>
+				<!--end::Content-->
+        <% end %>
+				<!--begin::Footer-->
+				<div class="d-flex flex-center flex-column-auto p-10">
+					<!--begin::Links-->
+					<div class="d-flex align-items-center fw-bold fs-6">
+						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
+						<a href="mailto:support@keenthemes.com" class="text-muted text-hover-primary px-2">Contact</a>
+						<a href="https://1.envato.market/EA4JP" class="text-muted text-hover-primary px-2">Contact Us</a>
+					</div>
+					<!--end::Links-->
+				</div>
+				<!--end::Footer-->
+			</div>
+			<!--end::Authentication - Sign-up-->
+		</div>
+	</body>
