--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -844,10 +844,10 @@
 																		<!--begin::User details-->
 																		<div class="d-flex flex-column" style="margin-left:20px">
 																			<% if user.role == 1 %>
-																				<a href="/users/parent-detail/<%=user.id%>" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
+																				<a href="/admin/users/parent-detail/<%=user.id%>" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
 																			<% end %>
 																			<% if user.role == 5 %>
-																				<a href="/users/teacher-detail/<%=user.id%>" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
+																				<a href="/admin/users/teacher-detail/<%=user.id%>" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
 																			<% end %>
 																			<% if user.role == 10 %>
 																				<a class="text-gray-800 text-hover-primary mb-1"><%=user.name%> (Admin) </a>
@@ -893,14 +893,14 @@
 																		<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
 																			<div class="menu-item px-3">
 																				<% if user.role == 1 %>
-																					<a href="/users/parent-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
+																					<a href="/admin/users/parent-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
 																				<% end %>
 																				<% if user.role == 5 %>
-																					<a href="/users/teacher-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
+																					<a href="/admin/users/teacher-detail/<%=user.id%>" class="menu-link px-3">Edit </a>
 																				<% end %>
 																			</div>
 																			<div class="menu-item px-3">
-																				<a href="/users/delete-user/<%=user.id%>" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
+																				<a href="/admin/users/delete-user/<%=user.id%>" class="menu-link px-3" data-kt-users-table-filter="delete_row">Delete</a>
 																			</div>
 																		</div>
 																	</td>
@@ -1152,7 +1152,7 @@
 																		<!--begin:: Avatar -->
 																		<div class="symbol symbol-circle">
 																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																			<a href="/users/parent-detail/1">
+																			<a href="/admin/users/parent-detail/1">
 																				<div class="symbol-label fs-3 bg-light-success text-success"><%=user.name[0..0]%> </div>
 																			</a>
 																		</div>
@@ -1161,7 +1161,7 @@
 																		<!--begin::User details-->
 																		<div class="d-flex flex-column" style="margin-left:20px">
 																		<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																			<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
+																			<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1"><%=user.name%> </a>
 																			<span class="fs-8"><%=user.email%></span>
 																		</div>
 																		<!--begin::User details-->
@@ -1644,7 +1644,7 @@
 																<!--begin:: Avatar -->
 																<div class="symbol symbol-circle">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																	<a href="/users/parent-detail/1">
+																	<a href="/admin/users/parent-detail/1">
 																		<div class="symbol-label">
 																			<img src="images/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
 																		</div>
@@ -1654,7 +1654,7 @@
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony zz</a>
+																	<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Jr Anthony zz</a>
 																	<span>youngsu.gil@gmail.com</span>
 																</div>
 																<!--begin::User details-->
@@ -1682,7 +1682,7 @@
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
+																		<a href="/admin/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
@@ -2138,7 +2138,7 @@
 																<!--begin:: Avatar -->
 																<div class="symbol symbol-circle">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다 symbol-50px overflow-hidden me-3"> %>
-																	<a href="/users/parent-detail/1">
+																	<a href="/admin/users/parent-detail/1">
 																		<div class="symbol-label">
 																			<img src="images/ysmeta/img_teacher.jpeg" alt="Max Smith" class="w-100">
 																		</div>
@@ -2148,7 +2148,7 @@
 																<!--begin::User details-->
 																<div class="d-flex flex-column">
 																<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																	<a href="/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
+																	<a href="/admin/users/parent-detail/1" class="text-gray-800 text-hover-primary mb-1">Dr. crazy Andrew</a>
 																	<span>max@kt.com</span>
 																</div>
 																<!--begin::User details-->
@@ -2173,7 +2173,7 @@
 																	<!--begin::Menu item-->
 																	<div class="menu-item px-3">
 																	<%# TODO:: USer의 ID 를 받아와 넘기도록 해야 합니다  %>
-																		<a href="/users/parent-detail/1" class="menu-link px-3">Edit</a>
+																		<a href="/admin/users/parent-detail/1" class="menu-link px-3">Edit</a>
 																	</div>
 																	<!--end::Menu item-->
 																	<!--begin::Menu item-->
