--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -81,14 +81,14 @@
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_school_class.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/class/class-list" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Class
 										<span class="fs-lg-9 badge badge-danger px-2 py-1 ms-2">New</span>
 									</span>
 								</a>
 							</div>
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_school_homework.html" title="Build your layout, preview and export HTML for server side integration" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/homework/homwork-list" title="Build your layout, preview and export HTML for server side integration" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Homework</span>
 								</a>
 							</div>
