--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -133,7 +133,7 @@
 						</span>
 						<div class="menu-sub menu-sub-lg-down-accordion menu-sub-lg-dropdown menu-rounded-0 py-lg-4 w-lg-225px">
 							<div class="menu-item">
-								<a class="menu-link py-3" href="../../demo4/dist/admin_community_qanda.html" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
+								<a class="menu-link py-3" href="/admin/community/qna" title="Check out over 200 in-house components, plugins and ready for use solutions" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">Q & A</span>
 								</a>
 							</div>
@@ -142,11 +142,12 @@
 									<span class="menu-title">review</span>
 								</a>
 							</div>
-							<div class="menu-item">
+							<%# TODO:: 대화 부분은 아직 작업을 하기에 이르다고 판단했습니다 %>
+							<%# <div class="menu-item">
 								<a class="menu-link py-3" href="../../demo4/dist/admin_community_talk.html" title="Check out the complete documentation" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-dismiss="click" data-bs-placement="right">
 									<span class="menu-title">talk</span>
 								</a>
-							</div>
+							</div> %>
 						</div>
 					</div>
 
