--- a/app/views/student/student_home.html.erb
+++ b/app/views/student/student_home.html.erb
@@ -490,7 +490,8 @@
                                     <!--begin::Col-->
                                     <div class="col-md-6 col-xl-4">
                                         <!--begin::Card-->
-                                        <a href="../../demo4/dist/student_class_homework.html" class="card border-hover-primary">
+                                        <%# TODO:: 여기서부터 for 문을 돌려 학생이 수강중인 클래스들의 정보를 가져오면 됩니다 %>
+                                        <a href="/class/classrom/2" class="card border-hover-primary">
                                             <!--begin::Card header-->
                                             <div class="card-header border-0 pt-9">
                                                 <!--begin::Card Title-->
@@ -563,154 +564,6 @@
                                         <!--end::Card-->
                                     </div>
                                     <!--end::Col-->
-
-                                    <!--begin::Col-->
-                                    <div class="col-md-6 col-xl-4">
-                                        <!--begin::Card-->
-                                        <a href="../../demo4/dist/student_class_homework_writing.html" class="card border-hover-primary">
-                                            <!--begin::Card header-->
-                                            <div class="card-header border-0 pt-9">
-                                                <!--begin::Card Title-->
-                                                <div class="card-title m-0">
-                                                    <!--begin::Avatar-->
-                                                    <div class="symbol symbol-50px w-50px bg-light">
-                                                        <img src="/images/ysmeta/img_01.jpg" alt="image" class="">
-                                                    </div>
-                                                    <!--end::Avatar-->
-                                                </div>
-                                                <!--end::Car Title-->
-                                                <!--begin::Card toolbar-->
-                                                <div class="card-toolbar">
-                                                    <span class="badge badge-light fw-bolder me-auto px-4 py-3">Pending</span>
-                                                </div>
-                                                <!--end::Card toolbar-->
-                                            </div>
-                                            <!--end:: Card header-->
-                                            <!--begin:: Card body-->
-                                            <div class="card-body p-9">
-                                                <!--begin::Name-->
-                                                <div class="fs-3 fw-bolder text-dark">3학년 A1 - BH2 라이팅수업 </div>
-                                                <!--end::Name-->
-                                                <!--begin::Description-->
-                                                <p class="text-gray-400 fw-bold fs-5 mt-1 mb-7">Writing class
-                                                    <span class="badge badge-success" >Academic</span>
-                                                </p>
-                                                <!--end::Description-->
-                                                <!--begin::Info-->
-                                                <div class="d-flex flex-wrap mb-5">
-                                                    <!--begin::Due-->
-                                                    <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 me-7 mb-3">
-                                                        <div class="fs-6 text-gray-800 fw-bolder">May 10, 2021</div>
-                                                        <div class="fw-bold text-gray-400">Start Date</div>
-                                                    </div>
-                                                    <!--end::Due-->
-                                                    <!--begin::Budget-->
-                                                    <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 mb-3">
-                                                        <div class="fs-6 text-gray-800 fw-bolder">June 10, 2021</div>
-                                                        <div class="fw-bold text-gray-400">End Date</div>
-                                                    </div>
-                                                    <!--end::Budget-->
-                                                </div>
-                                                <!--end::Info-->
-                                                <!--begin::Progress-->
-                                                <div class="h-4px w-100 bg-light mb-5" data-bs-toggle="tooltip" title="" data-bs-original-title="This project 30% completed">
-                                                    <div class="bg-info rounded h-4px" role="progressbar" style="width: 0%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                                <!--end::Progress-->
-                                                <!--begin::Users-->
-                                                <div class="symbol-group symbol-hover">
-                                                    <!--begin::User-->
-                                                    <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Alan Warden">
-                                                        <span class="symbol-label bg-warning text-inverse-warning fw-bolder">A</span>
-                                                    </div>
-                                                    <!--begin::User-->
-                                                    <!--begin::User-->
-                                                    <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Brian Cox">
-                                                        <img alt="Pic" src="/images/avatars/150-4.jpg">
-                                                    </div>
-                                                    <!--begin::User-->
-                                                </div>
-                                                <!--end::Users-->
-                                            </div>
-                                            <!--end:: Card body-->
-                                        </a>
-                                        <!--end::Card-->
-                                    </div>
-                                    <!--end::Col-->
-
-                                    <!--begin::Col-->
-                                    <div class="col-md-6 col-xl-4">
-                                        <!--begin::Card-->
-                                        <a href="../../demo4/dist/index_classes.html" class="card border-hover-primary">
-                                            <!--begin::Card header-->
-                                            <div class="card-header border-0 pt-9">
-                                                <!--begin::Card Title-->
-                                                <div class="card-title m-0">
-                                                    <!--begin::Avatar-->
-                                                    <div class="symbol symbol-50px w-50px bg-light">
-                                                        <img src="/images/ysmeta/img_01.jpg" alt="image" class="">
-                                                    </div>
-                                                    <!--end::Avatar-->
-                                                </div>
-                                                <!--end::Car Title-->
-                                                <!--begin::Card toolbar-->
-                                                <div class="card-toolbar">
-                                                    <span class="badge badge-light fw-bolder me-auto px-4 py-3">Close</span>
-                                                </div>
-                                                <!--end::Card toolbar-->
-                                            </div>
-                                            <!--end:: Card header-->
-                                            <!--begin:: Card body-->
-                                            <div class="card-body p-9">
-                                                <!--begin::Name-->
-                                                <div class="fs-3 fw-bolder text-dark">7학년 A1 - BH2 디베이팅수업 </div>
-                                                <!--end::Name-->
-                                                <!--begin::Description-->
-                                                <p class="text-gray-400 fw-bold fs-5 mt-1 mb-7">Debating class</p>
-                                                <!--end::Description-->
-                                                <!--begin::Info-->
-                                                <div class="d-flex flex-wrap mb-5">
-                                                    <!--begin::Due-->
-                                                    <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 me-7 mb-3">
-                                                        <div class="fs-6 text-gray-800 fw-bolder">May 10, 2021</div>
-                                                        <div class="fw-bold text-gray-400">Start Date</div>
-                                                    </div>
-                                                    <!--end::Due-->
-                                                    <!--begin::Budget-->
-                                                    <div class="border border-gray-300 border-dashed rounded min-w-125px py-3 px-4 mb-3">
-                                                        <div class="fs-6 text-gray-800 fw-bolder">July 10, 2021</div>
-                                                        <div class="fw-bold text-gray-400">End Date</div>
-                                                    </div>
-                                                    <!--end::Budget-->
-                                                </div>
-                                                <!--end::Info-->
-                                                <!--begin::Progress-->
-                                                <div class="h-4px w-100 bg-light mb-5" data-bs-toggle="tooltip" title="" data-bs-original-title="This project 30% completed">
-                                                    <div class="bg-info rounded h-4px" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                                                </div>
-                                                <!--end::Progress-->
-                                                <!--begin::Users-->
-                                                <div class="symbol-group symbol-hover">
-                                                    <!--begin::User-->
-                                                    <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Alan Warden">
-                                                        <span class="symbol-label bg-warning text-inverse-warning fw-bolder">A</span>
-                                                    </div>
-                                                    <!--begin::User-->
-                                                    <!--begin::User-->
-                                                    <div class="symbol symbol-35px symbol-circle" data-bs-toggle="tooltip" title="" data-bs-original-title="Brian Cox">
-                                                        <img alt="Pic" src="/images/avatars/150-4.jpg">
-                                                    </div>
-                                                    <!--begin::User-->
-                                                </div>
-                                                <!--end::Users-->
-                                            </div>
-                                            <!--end:: Card body-->
-                                        </a>
-                                        <!--end::Card-->
-                                    </div>
-                                    <!--end::Col-->
-                                
-
 
                                 </div>
                                 <!--end::Row-->
